test/error/interface_modport_unlisted.sv
interface Interface;
    logic x;
endinterface

module Module;
    Interface i;
endmodule
